# PETAL

./: README.md  pyproject.toml
example/: colony_pollinator_traits.csv  config.yml  solitary_pollinator_traits.csv
petal/: PETALModel.py  __init__.py  colony_pollinator.py  patch_runner.py  petal_cli.py  plant_runner.py  pollinator.py  pollinator_runner.py  solitary_pollinator.py
